# JPEG_COMPRESS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Day1/: CMakeLists.txt  JpegEncoder.cpp  JpegEncoder.h  README.md  main.cpp
Day1/include/: BMPReader.h  common.h
Day1/src/: BMPReader.cpp
Day2/: CMakeLists.txt  README.md  main.cpp
Day2/include/: BMP.h  JPG.h  common.h
Day2/src/: BMP.cpp  JPG.cpp  common.cpp
Day3/: CMakeLists.txt  README.md  main.cpp
Day3/include/: JPG.h  common.h
Day4/: CMakeLists.txt  README.md  main.cpp
Day4/include/: JPG.h  common.h
Day4/src/: JPG.cpp  common.cpp
Day5/: CMakeLists.txt  README.md  main.cpp
Day5/include/: JPG.h
Day5/src/: JPG.cpp
Day6/: CMakeLists.txt  README.md  main.cpp
Day6/include/: BMPReader.h  JPG.h  common.h
Day6/src/: BMPReader.cpp  JPG.cpp  common.cpp
Decoder/: CMakeLists.txt  Decoder.cpp  Jpeg.h
Decoder/include/: Jpeg.h
JPEG/: CMakeLists.txt  JPEG.cpp
